fix content wrap

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -69,7 +69,8 @@ header {
     top: 0%;
 }
 .content-section {
-    padding: 40px 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 
@@ -357,7 +358,9 @@ h1 {
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
-
+    &.content-section {
+        padding: 0px;
+    }
     .card {
         background-color: #fff;
         flex: 2 80%;
